z-index fix

--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,7 @@ div.hamburger.open .hamburger-inner:before {
   background: black;
   padding: 20px;
   position: relative;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 .informacion-portada .titulo p{
